--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "comodo-ui",
+  "name": "issue-tracker-system",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -30,7 +30,7 @@
     "ngx-pagination": "^6.0.3",
     "open-iconic": "^1.1.1",
     "rxjs": "~7.8.0",
-    "sweetalert2": "^11.7.26",
+    "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
